add zkchannelbalance command and prevent user setting up customer and merch dbs
- add zkchannelbalance command
    - works for customer only
- prevent user from setting up as a customer and a merchant
